# sapience

./: .env.example  .gitignore  PRIVACY.md  README.md  consolidator.py  embeddings.py  ledger.py  memory_store.py  migrate.py  pyproject.toml  requirements.txt  resolver.py  run_consolidate.sh  run_server.sh  run_weekly_review.sh  schema.py  server.py  weekly_review.py
.claude-plugin/: marketplace.json
.claude/commands/: log.md
.github/workflows/: ci.yml  publish.yml
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/skills/log/: SKILL.md
sapience/: __init__.py  consolidator.py  demo.py  embeddings.py  ledger.py  memory_store.py  migrate.py  paths.py  repair.py  resolver.py  schema.py  server.py  weekly_review.py
tests/: conftest.py  test_calibration.py  test_consolidator.py  test_demo.py  test_embeddings_provider.py  test_memory_admin.py  test_memory_store.py  test_namespaces.py  test_repair.py
