[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sapience"
version = "0.1.0"
description = "Human-like memory and a judgment ledger for AI — an MCP server for Claude Code."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Allen Chen" }]
keywords = ["mcp", "claude", "ai-memory", "judgment-ledger", "calibration", "llm"]
dependencies = [
    "chromadb>=0.6.0",
    "openai>=1.56.0",
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
    "python-frontmatter>=1.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
sapience = "sapience.server:cli"
sapience-weekly-review = "sapience.weekly_review:main"
sapience-consolidate = "sapience.consolidator:main"
sapience-demo = "sapience.demo:main"

[project.urls]
Homepage = "https://github.com/allenc84/sapience"

[tool.setuptools]
packages = ["sapience"]
